--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,59 @@
   box-sizing: border-box;
 }
 
+/* Global Styles */
+
+.section-padding {
+  padding: 3rem 0;
+}
+
+.grid-container {
+  max-width: 90vw;
+  margin: 2rem auto;
+  display: grid;
+  grid-row-gap: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--container-medium-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 4rem;
+  }
+
+  .grid-container {
+    max-width: 75vw;
+  }
+}
+
+.section-title__underline {
+  background: var(--blue);
+  width: 5rem;
+  height: 0.25rem;
+}
+
+.section-title__text {
+  letter-spacing: 0.1rem;
+  line-height: 1.5rem;
+  margin-top: 1rem;
+}
+/* Section Title */
+
+.section-title-name {
+  font-size: 2.3rem;
+  text-transform: capitalize;
+}
+
+.section-title {
+  padding: 1rem 0.5rem;
+}
+.text-slanted {
+  font-family: "Parisienne", cursive;
+}
+
 body {
   font-family: "Times New Roman", Times, serif;
   color: var(--black);
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
-    ),
-    url(../images/bodyBcg.jpg) no-repeat;
 }
 
 /* Preloader Styles */
@@ -197,6 +242,7 @@ body {
 
   .video__switch {
     position: relative;
+    color: #fff;
     width: 5rem;
     background: var(--blue);
     text-transform: uppercase;
@@ -215,5 +261,146 @@ body {
     width: 50%;
     background: var(--brightblue);
     border-radius: 0.5rem;
+    transition: all 0.3s ease-out;
+  }
+
+  .btnSlide {
+    left: 50%;
+  }
+}
+
+/* About Section */
+
+.about-container {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto 1fr;
+  grid-gap: 2rem;
+}
+.about__img-item {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 0.25rem;
+}
+
+@media screen and (min-width: 768px) {
+  .about__img-special {
+    order: -1;
+  }
+  .about-container {
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
+/*Room Section */
+
+.rooms {
+  background: var(--darkblue);
+  color: var(--brightblue);
+  text-transform: capitalize;
+}
+
+.room-form,
+.room-card {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 70%;
+  justify-content: center;
+  grid-row-gap: 1.25rem;
+}
+
+.room-form-feedback {
+  border: 0.05rem solid var(--brightblue);
+  padding: 0.55rem;
+  display: none;
+}
+
+.error {
+  display: block;
+  color: red;
+  border-color: red;
+}
+.success {
+  display: block;
+  color: green;
+  border-color: green;
+}
+
+.room-form-title,
+.room-card-title {
+  font-size: 2rem;
+}
+
+.input-name,
+.input-lastname,
+.input-email {
+  width: 100%;
+}
+
+.input-name,
+.input-lastname,
+.input-email,
+.input-submit {
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  padding: 0.7rem 0.5rem;
+  background: rgba(0, 66, 128, 0.603);
+  color: var(--brightblue);
+  border: none;
+  outline: none;
+}
+
+.input-name::placeholder,
+.input-lastname::placeholder,
+.input-email::placeholder {
+  font-size: 1rem;
+  color: var(--brightblue);
+}
+
+.input-submit {
+  cursor: pointer;
+  color: var(--black);
+  text-transform: uppercase;
+  background: #fff;
+  transition: all 0.5s linear;
+}
+
+.input-submit:hover {
+  background: var(--grey);
+  color: #fff;
+}
+
+.room-card__list {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-row-gap: 2rem;
+}
+
+.person {
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  align-items: center;
+  grid-gap: 1rem;
+  text-align: left;
+  border: 0.1rem solid rgba(255, 255, 255, 0.63);
+  padding: 0.5rem;
+  border-radius: 0.7rem;
+  font-size: 1rem;
+}
+
+.person-thumbnail {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 0.1rem solid rgba(255, 255, 255, 0.63);
+}
+
+@media screen and (min-width: 768px) {
+  .room-card__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
   }
 }
